# DrumSwarmInternational

./: .coverage  .gitignore  .plan  CLAUDE.md  ED_BASICS_WORK_PLAN.md  ED_HANDOFF_BASICS_PHASE.md  FILES_CREATED.txt  FRONT_ENSEMBLE_TECH_SESSION_SUMMARY.md  JUDGE_MONITORING_INDEX.md  JUDGE_MONITORING_SETUP.md  JUDGE_QUICK_REFERENCE.md  PERCUSSION_ACHIEVEMENT_SUBMISSION_SUMMARY.txt  PERCUSSION_REPUTATION_INDEX.md  README.md  READY_FOR_CONTEST_REVIEW.md  SESSION_HANDOFF.md  TIMING_JUDGE_DIAGNOSTIC_2026-02-01_0207.md  TIMING_JUDGE_STATUS_2026-02-01_0215.md  TOOLS_SUMMARY.md  WORK_SUBMISSION_PERCUSSION_REPUTATION.md  alembic.ini  dci  dci_swarm.db-shm  percussion_reputation_implementation.md  pyproject.toml  test_output.txt  test_results.txt
.claude/: settings.json  settings.local.json
.dci/: instance-id
alembic/: env.py
alembic/versions/: 0c46a5266b89_baseline_schema_with_nickname_column.py  (+20 more)
backend/: database.py  mcp_server.py
docs/: CONTRIBUTING.md  achievements.md  agents-and-skills-analysis.md  architecture.md  concept-mapping.md  domain-glossary.md  frontend_migration_analysis.md  judge-monitoring-guide.md  model-strategy-ui-gaps.md  plugin-analysis.md  session_2026_02_01_summary.md  ui-sitemap.md
examples/: judge_monitoring_example.py
frontend/: package-lock.json  package.json  test_implementation.js  vite.config.ts
prompts/: design_room.md  judging.md  offseason_review.md  rehearsal_mode.md  show_mode.md
screenshots/: README.md  prompts.md
scripts/: heartbeat_cron.sh
swarm-kit/: detect-llm.sh  install.sh  plugins.yaml
talent_pool/: ledger.yaml
(+1352 files in other folders)
