[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dci-swarm"
version = "0.1.0"
description = "Agent orchestration engine using a DCI drum corps domain model"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "anthropic>=0.40",
    "mcp>=1.0",
    "pyyaml>=6.0",
    "alembic>=1.13",
    "chromadb>=0.5",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
cli = [
    "httpx>=0.27",
    "rich>=13.0",
]
tui = [
    "textual>=0.89.0",
    "pyte>=0.8.1",
    "pywinpty>=2.0; sys_platform == 'win32'",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
